Fix figure on mobile

--- a/_src/css/_post.scss
+++ b/_src/css/_post.scss
@@ -77,7 +77,7 @@
         }
         .figure--text-on-right {
 
-            @media ( max-width: 900px ), ( min-width: 1000px ){
+            @media ( min-width: 600px ) and ( max-width: 900px ), ( min-width: 1000px )  {
                 display: flex;
             }
 
@@ -86,6 +86,10 @@
             IMG {
                 margin-right: 2rem;
                 align-self: flex-start;
+
+                @media ( max-width: 600px ), ( min-width: 900px ) and ( max-width: 1000px )  {
+                    margin-bottom: 1rem;
+                }
             }
         }
 
